# glados-backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  config.sample.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 0c1f5dc9386c_new_user_levels.py  1ad683b27dc8_order_number.py  1ffaf22f524c_add_theme.py  3d9027c47dd2_add_projects.py  44bf23b4a684_add_break_by_day.py  7e368bdcfd1c_add_weblink.py  824d657001b8_product_number.py  8723510377cf_add_user_time_table.py  b8e97eca009f_add_rfid.py  bcb5660f3d54_first_revision.py  d0a0b4c23404_new_foreign_keys.py  db07c6ea0cc1_add_user_time_table.py  ed7ee21cc61e_add_language.py  f74f18d478ec_rename_tables.py
app/: __init__.py  __main__.py  config.py  const.py  exceptions.py  main.py  multilog.py  security.py  server.py
app/api/: decorators.py  deps.py  responses.py
app/api/pat_v1/: api_pat.py
app/api/pat_v1/endpoints/: bought_items.py  login.py
app/api/schemas/: __init__.py  api_key.py  bought_item.py  email_notification.py  host.py  project.py  schema_api_key.py  schema_bought_item.py  schema_host.py  schema_stock_cut_1d.py  schema_stock_cut_2d.py  schema_user.py  stock_cut_1d.py  stock_cut_2d.py  token.py  user.py  user_time.py
app/api/v1/key/: api_key.py
app/api/web_v1/: api_web.py
app/crud/: __init__.py  api_key.py  base.py  bought_item.py  crud_api_key.py  crud_base.py  crud_bought_item.py  crud_email_notification.py  crud_user.py  email_notification.py  helper.py  project.py  user.py  user_time.py
app/db/: alembic_imports.py  base.py  session.py
app/db/models/: __init__.py  api_key.py  bought_item.py  email_notification.py  model_api_key.py  model_bought_item.py  model_email_notification.py  model_user.py  project.py  user.py  user_time.py
app/excel/: style.py  xlsx_export.py  xlsx_import.py
app/excel/xlsx_export/: base.py  bought_item.py
app/excel/xlsx_import/: base.py  bought_item.py
app/locales/: __init__.py  deAT.py  de_AT.py  enGB.py  en_GB.py  languageModel.py
app/mail/: __init__.py  presets.py  render.py  send.py
app/models/: model_api_key.py  model_bought_item.py  model_email_notification.py  model_user.py
app/schedules/: base_schedules.py  database_schedules.py  file_schedules.py  notification_schedules.py  system_schedules.py
app/schemas/: schema_bought_item.py  schema_email_notification.py  schema_host.py  schema_token.py  schema_user.py
app/security/: __init__.py  access.py  pwd.py
app/tools/stock_cut/: job.py  result.py  solver.py
app/tools/stock_cut_1d/: common.py  models.py  solver.py
app/tools/stock_cut_2d/: models.py  solver.py
app/utilities/: disc_space.py  helper.py  log_files.py  system.py
app/utilities/config_editor/: bought_items.py
database/: create_dummy_data.py
docs/: DEV.md  INSTALL.md  UPDATE.md
glados/: __init__.py
scripts/: glados-aliases.sh  glados-welcome.sh
services/: glados.service
templates/: bought_item_import.sample.xlsx  disc_space_warning.sample.j2  item_notification.sample.j2  schedule_error.sample.j2  welcome.sample.j2
tests/: __init__.py  conftest.py  test_glados.py
tests/api/: test_bought_items.py  test_login.py  test_users.py
tests/api/web/: test_login.py
tests/crud/: test_bought_item.py  test_project.py  test_user.py
tests/crud/bought_item/: test_crud_bought_item_common.py  test_crud_bought_item_create.py  test_crud_bought_item_delete.py  test_crud_bought_item_read.py  test_crud_bought_item_update.py
tests/crud/project/: test_crud_project_common.py  test_crud_project_create.py  test_crud_project_delete.py  test_crud_project_read.py  test_crud_project_update.py
tests/crud/user/: test_crud_user_common.py  test_crud_user_create.py  test_crud_user_delete.py  test_crud_user_read.py  test_crud_user_update.py
tests/crud/user-time/: test_crud_user_time_create.py
tests/utils/: bought_item.py  project.py  user.py  utils.py
(+63 files in other folders)
