[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Unix"]
description = "Backend for the glados project."
name = "glados"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
alembic = "^1.9.1"
celery = "^5.2.7"
email-validator = "^1.3.0"
emails = "^0.6.0"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
raven = "^6.10.0"
requests = "^2.28.0"
sqlalchemy = "^1.4.46"
tenacity = "^8.1.0"
uvicorn = "^0.20.0"
APScheduler = "^3.9.1"
coloredlogs = "^15.0.1"
openpyxl = "^3.0.10"

[tool.poetry.group.dev.dependencies]
faker = "^16.3.0"
black = "22.12.0"
isort = "^5.4.11"
pdoc3 = "^0.10.0"
pre-commit = "^2.21.0"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sqlalchemy-stubs = "^0.4"
faker-commerce = "^1.0.3"
httpx = "^0.23.3"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
