[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Unix"]
description = "Backend for the glados project."
name = "glados"
readme = "README.md"
version = "0.13.0"
packages = [{include = "app"}]

[tool.poetry.dependencies]
alembic = "^1.13.2"
email-validator = "^2.2.0"
fastapi = "^0.112.1"
dill = "^0.3.9"
gunicorn = "^23.0.0"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
requests = "^2.32.0"
sqlalchemy = "2.0.32"
uvicorn = "^0.30.6"
APScheduler = "^3.10.4"
coloredlogs = "^15.0.1"
openpyxl = "^3.1.5"
opcut = "0.4.9" # OPCUT requires chairo, refer to installation chapter in the readme
pypdf = "^4.3.1"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.2"
bcrypt = "^4.2.1"

[tool.poetry.group.dev.dependencies]
faker = "^27.0.0"
black = "24.3.0"
isort = "^5.11.5"
pdoc3 = "^0.11.1"
pre-commit = "^3.8.0"
pylint = "^3.0.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
faker-commerce = "^1.0.3"
httpx = "^0.27.0" # The starlette.testclient module requires the httpx package to be installed.

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
